@@ -54,6 +54,15 @@ application {
     mainClass = 'com.tsurugidb.tsubakuro.kvs.realbench.RealTransactionTest'
 }
 
+tasks.register('runTranTest', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.realbench.RealTransactionTest'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED']
+    args = ['ipc:tateyama']
+}
+
 test {
     useJUnitPlatform()
 }
@@ -102,4 +111,3 @@ tasks.matching { it.name == 'eclipseJdt' }.each { task ->
         classpath.entries.unique()
     }
 }
-
